<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/bank_account"
        android:title="Overview"/>

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/dollar_icon"
        android:title="Payments"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="Profile"/>

</menu>
